<resources>
    <string name="app_name">FlyFilmsX</string>
    <string name="btnNyao">Нажми меня нежно</string>
    <string name="tvNyao">MainFragment</string>
    <string name="filmCaption">Название фильма</string>
    <string name="filmDescription">Описание фильма</string>
    <string name="filmTags">Категории фильма</string>
    <string name="filmDateFrom">Дата старта проката</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_msg">Ошбика</string>
    <string name="reload_msg">Обновить</string>
    <string name="testFilmLayoutCaption">Очень длинное название фильма которое может не поместиться в ответденную ему область</string>
    <string name="testFilmLayoutDescription">Когда Барри Аллен был маленьким, больше всего на свете ему хотелось быть супергероем – тем, кто превосходит лимиты человеческого организма и использует во благо данную ему силу. Когда Барри было одиннадцать лет, он на собственном опыте узнал, что люди с необычными способностями действительно существуют: его мать была убита одним из таких людей. Повзрослев и став судмедэкспертом, Барри не отбросил мыслей о сверхлюдях и продолжал искать доказательства их существования, что не лучшим образом сказывалось на его репутации и общении с коллегами. Впрочем, однажды его усилия были вознаграждены...</string>
    <string name="testFilmLayoutGenres">Жанры</string>

    <string name="threads">Threads</string>
    <string name="in_main_thread">В главном потоке</string>
    <string name="from_thread">Из потока %d</string>
    <string name="in_thread">Выводим в потоке %s</string>
    <string name="calculate_in_thread">Считаем в потоке %s</string>
    <string name="my_handler_thread">My_Handler_Thread</string>
    <string name="hello_from_thread_fragment">Hello from ThreadsFragment</string>
    <string name="calculate">Расчет</string>
    <string name="default_number">1</string>
    <string name="calc_in_thread">Расчет в потоке</string>
    <string name="handler_thread">Handler_Thread</string>
    <string name="service">Service</string>
    <string name="service_broadcast">Service + Broadcast</string>
    <string name="content18plus">Контент для взрослых</string>
    <string name="toMain">На главную</string>
    <string name="settings">Настройки</string>
    <string name="like">Избранное</string>
    <string name="search">Поиск</string>
    <string name="content18plusCard">18+</string>
    <string name="is_like">Нравится</string>
    <string name="commentNow">Оставить заметку</string>
    <string name="todoComment">Оставьте заметку...</string>
    <string name="btnCommentOk">Ok</string>
    <string name="contacts_title">Контакты</string>
    <string name="permission_error_msg">Ошибка загрузки контактов</string>
    <string name="permission_reload_msg">Попробовать снова</string>

    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="google_maps">Google Maps</string>
    <string name="default_address">Red Square, 1, Moscow</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Start</string>

</resources>