<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">

    <item
        android:id="@+id/menuMain"
        android:title="@string/toMain"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="10"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuSettings"
        android:title="@string/settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuLike"
        android:title="@string/like"
        android:icon="@android:drawable/btn_star_big_on"
        android:orderInCategory="20"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuSearch"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="5"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
</menu>